--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Reysongs❤</title>
   <link rel="stylesheet" href="style.css" type="text/css">
-  
+  <pre> <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"> <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> <meta name="HandheldFriendly" content="true"></pre>
   </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -14,7 +14,7 @@
  <li><a>Sorry would go a long way </a>
       <ul>
         <li><a>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/ci3pmc4nORk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="auto" height="315" src="https://www.youtube.com/embed/ci3pmc4nORk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a></li>
       </ul>
     </li>
@@ -34,7 +34,7 @@
     <li><a>All in my head</a>
       <ul>
         <li><a>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/QTrb92wmLTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="auto" height="315" src="https://www.youtube.com/embed/QTrb92wmLTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a></li>
       </ul>
     </li>
@@ -48,7 +48,7 @@
     <li><a>Never alone</a>
       <ul>
         <li><a>
-          <iframe width="560" height="315" 
+          <iframe width="auto" height="315" 
           src="https://www.youtube.com/embed/srGIp4LO-XM" 
           frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a></li>
@@ -60,10 +60,12 @@
 
     <li><a>coffee live</a>
       <ul>
-        <li><a><iframe width="560" height="315" src="https://www.youtube.com/embed/cnK0X_1OLTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <li><a><iframe width="auto" height="315" src="https://www.youtube.com/embed/cnK0X_1OLTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </a></li>
       </ul>
     </li>
+  <br>
+  <br><br><br><br><br><br><br><br>
   
   
   
