--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <li><a>Sorry would go a long way </a>
       <ul>
         <li><a>
-          <iframe width="auto" height="10" src="https://www.youtube.com/embed/ci3pmc4nORk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="auto" height="auto" src="https://www.youtube.com/embed/ci3pmc4nORk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a></li>
       </ul>
     </li>
@@ -24,7 +24,7 @@
     <li><a>Lecrae - I'll find you</a>
       <ul>
         <li><a>
-          <iframe width="auto" height="10" src="https://www.youtube.com/embed/Jv8IqJm6q7w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="auto" height="auto" src="https://www.youtube.com/embed/Jv8IqJm6q7w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a></li>
       </ul>
     </li>
@@ -34,7 +34,7 @@
     <li><a>All in my head</a>
       <ul>
         <li><a>
-          <iframe width="auto" height="10" src="https://www.youtube.com/embed/QTrb92wmLTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="auto" height="auto" src="https://www.youtube.com/embed/QTrb92wmLTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a></li>
       </ul>
     </li>
@@ -48,7 +48,7 @@
     <li><a>Never alone</a>
       <ul>
         <li><a>
-          <iframe width="auto" height="10" 
+          <iframe width="auto" height="auto" 
           src="https://www.youtube.com/embed/srGIp4LO-XM" 
           frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a></li>
@@ -60,7 +60,7 @@
 
     <li><a>coffee live</a>
       <ul>
-        <li><a><iframe width="auto" height="10" src="https://www.youtube.com/embed/cnK0X_1OLTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <li><a><iframe width="auto" height="auto" src="https://www.youtube.com/embed/cnK0X_1OLTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </a></li>
       </ul>
     </li>
