--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <title>Reysongs❤</title>
   <link rel="stylesheet" href="style.css" type="text/css">
   <pre> <meta name="viewport" content="width=device-width,initial-scale=1.3,maximum-scale=1.3,user-scalable=no"> <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> <meta name="HandheldFriendly" content="true"></pre>
-  </head>
+  <style>
+    body{text-align: center;}
+    </style>
+</head>
 <body>
 <!-- partial:index.partial.html -->
 <nav role='navigation'>
