--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@
       </ul>
     </li>
   <br>
+
+  <br>
+    
+    <li><a>Suit & Tie (cover)</a>
+      <ul>
+        <li><a>
+          <iframe width="auto" height="auto" 
+          src="https://youtu.be/7_3hKVxOcRI"
+          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </a></li>
+      </ul>
+    </li>
+
+    <br>
+
  </ul>
 </nav>
   
