--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
     <li><a>Suit & Tie (cover)</a>
       <ul>
         <li><a>
-          <iframe width="auto" height="auto" 
-          src="https://youtu.be/7_3hKVxOcRI"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="auto" height="auto" src="https://www.youtube.com/embed/7_3hKVxOcRI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </a></li>
       </ul>
     </li>
