--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <li><a>All in my head<br></a>
       <ul>
         <li><a>
+          <div class="mfp-hide">
           <iframe width="auto" height="auto" src="https://www.youtube.com/embed/QTrb92wmLTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         </a></li>
       </ul>
     </li>
